logs/mysql-connector-repackaged.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/mysql'...
Listing './lib/python3.5/site-packages/mysql/connector'...
Compiling './lib/python3.5/site-packages/mysql/connector/connection.py'...
***   File "./lib/python3.5/site-packages/mysql/connector/connection.py", line 97
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mysql/connector/constants.py'...
***   File "./lib/python3.5/site-packages/mysql/connector/constants.py", line 43
    raise TypeError, "Can not instanciate from %s" % cls.__name__
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mysql/connector/conversion.py'...
***   File "./lib/python3.5/site-packages/mysql/connector/conversion.py", line 279
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mysql/connector/cursor.py'...
***   File "./lib/python3.5/site-packages/mysql/connector/cursor.py", line 196
    except StandardError, e:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mysql/connector/errors.py'...
***   File "./lib/python3.5/site-packages/mysql/connector/errors.py", line 78
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mysql/connector/protocol.py'...
***   File "./lib/python3.5/site-packages/mysql/connector/protocol.py", line 51
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mysql/connector/utils.py'...
***   File "./lib/python3.5/site-packages/mysql/connector/utils.py", line 88
    if i < 0 or i > 4294967295L:
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mysql_connector_repackaged-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
